# mistlock

./: CONTRIBUTING.md  LICENSE  README.es.md  README.md  git-mv.txt  pyproject.toml
.claude/: CLAUDE.md
src/aws/mves/s3-minio/: .env  .env.test  README.es.md  README.md  docker-compose.yml  mise.toml  pyproject.toml
src/aws/mves/s3-minio/.devcontainer/: devcontainer.json
src/aws/mves/s3-minio/scripts/: minio_cli.sh  run_tests.sh
src/aws/mves/s3-minio/tests/: conftest.py
src/azure-sql-database/: .env  Dockerfile  README.es.md  README.md  docker-compose.yml  local.settings.json  main.py  mise.toml  pyproject.toml
src/azure-sql-database/.devcontainer/: devcontainer.json
src/azure-sql-database/dapr/components/: blob-input.yaml  sql-output.yaml
src/azure-sql-database/functions/: register_user.py
src/azure-sql-database/scripts/: init-sql.sh  install-odbc.sh  setup-mve.sh
src/azure-sql-database/shared/: database.py  db_utils.py
src/azure-sql-database/sql/: init.sql
src/azure-sql-database/src/function/: database.py  function_app.py  local.settings.json  requirements.txt
src/azure/mves/databricks/: .env  Dockerfile  README.es.md  README.md  docker-compose.yml  main.py  pyproject.toml
src/azure/mves/databricks/.devcontainer/: devcontainer.json
src/google-cloud/mves/firebase-cloud-functions/: .env  .firebaserc  README.es.md  README.md  firebase.json  main.py  mise.toml  pyproject.toml
src/google-cloud/mves/firebase-cloud-functions/.devcontainer/: devcontainer.json
src/google-cloud/mves/firebase-cloud-functions/functions/: .env.local  .secret.local  main.py
src/google-cloud/mves/firebase-cloud-functions/scripts/: run_main.sh  run_tests.sh  setup.sh
src/google-cloud/mves/firebase-cloud-functions/tests/: test_get_secret.py
src/google-cloud/projects/simple-etl/: .env  README.es.md  README.md  docker-compose.yml  main.py  mise.toml  pyproject.toml
src/google-cloud/projects/simple-etl/.devcontainer/: devcontainer.json
src/google-cloud/projects/simple-etl/functions/: .env  main.py
src/google-cloud/projects/simple-etl/sql/: 01_init.sql
src/google-cloud/projects/storage-writer/: .env  README.es.md  README.md  firebase.json  pyproject.toml  test_function.py
src/google-cloud/projects/storage-writer/.devcontainer/: devcontainer.json  postCreateCommand.sh
(+498 files in other folders)
