[project]
name = "azure-sql-database"
version = "0.1.0"
description = "Azure SQL MVE with Azure Functions and SQLAlchemy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "python-dotenv",
    "azure-functions",
    "sqlalchemy",
    "pyodbc",
    "python-dotenv"
]
