[project]
name = "databricks-docker"
version = "0.1.0"
description = "High-fidelity local Databricks environment using Docker"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyspark==3.5.0",
    "delta-spark==3.2.0",
    "boto3==1.34.0",
    "python-dotenv==1.0.0",
    "psycopg2-binary==2.9.9",
    "ipykernel",
    "notebook",
]
