[project]
name = "gcp-cloud-sql"
version = "0.1.0"
description = "Minimal Viable Example for GCP Cloud SQL (Postgres) local emulation with Firebase Cloud Functions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-cloud-storage",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
]
